[gd_scene load_steps=8 format=3 uid="uid://d1cq7xawcqirs"]

[ext_resource type="Script" uid="uid://e7og1p52rh63" path="res://addons/revelab_base_kit/save_load_ui/hud/hud.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cfup1mfg2cfii" path="res://addons/revelab_base_kit/save_load_ui/debug/current_game_info.tscn" id="4_gm0qd"]
[ext_resource type="Texture2D" uid="uid://bex7xvfp57k0f" path="res://addons/revelab_base_kit/icons/save_component.png" id="4_kbgrg"]
[ext_resource type="PackedScene" uid="uid://b0g1p66e4x31u" path="res://addons/revelab_base_kit/save_load_ui/pause/pause_dialog.tscn" id="5"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Auto_Save:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Auto_Save:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="3"]
resource_name = "disk_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Auto_Save:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 360.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Auto_Save:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqp6m"]
_data = {
&"RESET": SubResource("2"),
&"disk_exit": SubResource("3")
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1")

[node name="Pause" parent="." instance=ExtResource("5")]
theme = null

[node name="Auto_Save" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 104.0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Auto_Save" type="TextureRect" parent="Auto_Save"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_kbgrg")

[node name="Auto_Save_Animation_Player" type="AnimationPlayer" parent="Auto_Save"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mqp6m")
}

[node name="Game_Info" parent="." instance=ExtResource("4_gm0qd")]

[connection signal="pause_about_to_show" from="Pause" to="." method="_on_pause_dialog_pause_about_to_show"]
[connection signal="animation_finished" from="Auto_Save/Auto_Save_Animation_Player" to="." method="_on_auto_save_animation_player_animation_finished"]
